fix(modal): remove scrollbars from dialog element
remove scrollbars from dialog element

✅ Closes: COMUI-3027

--- a/packages/genesys-spark-components/src/components/stable/gux-modal/gux-modal.scss
+++ b/packages/genesys-spark-components/src/components/stable/gux-modal/gux-modal.scss
@@ -19,6 +19,7 @@ slot[name='start-align-buttons']::slotted(:not(button, gux-button-slot)) {
     box-sizing: border-box;
     justify-content: space-between;
     padding: 0;
+    overflow: hidden;
     border: none;
     border-radius: var(--gse-ui-modal-borderRadius);
     box-shadow: var(--gse-ui-modal-boxShadow-x) var(--gse-ui-modal-boxShadow-y)
